# Configuration script for pntools (experimental tool directory)
# Sven van Haastregt
# LIACS, Leiden University

AC_INIT
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(pntools, 0.01)
AC_PROG_CC

AC_PROG_LIBTOOL

AC_TYPE_SIZE_T

AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(void *)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(size_t)

if test "$ac_cv_sizeof_size_t" -lt "$ac_cv_sizeof_void_p"; then
    AC_MSG_ERROR("size_t to small")
fi

AC_SUBST(rd_cv_pointer_int_t)
if test "$ac_cv_sizeof_long" = "$ac_cv_sizeof_void_p" ; then
    rd_cv_pointer_int_t="unsigned long"
elif test "$ac_cv_sizeof_int" = "$ac_cv_sizeof_void_p" ; then
    rd_cv_pointer_int_t="unsigned int" 
elif test "$ac_cv_sizeof_long_long" = "$ac_cv_sizeof_void_p" ; then  
    rd_cv_pointer_int_t="unsigned long long"
elif test "$ac_cv_sizeof_short" = "$ac_cv_sizeof_void_p" ; then
    rd_cv_pointer_int_t="unsigned short"
else
    AC_ERROR("No integer type matches pointer size")
fi
echo "Using type $rd_cv_pointer_int_t as pointer size integer type."

AC_SUBST(u_int32_decl)
AC_CHECK_TYPE(u_int32_t)
rd_cv_uint32=$ac_cv_type_u_int32_t
if test "$rd_cv_uint32" = no; then
    if test "$ac_cv_sizeof_short" = 4 ; then 
        rd_cv_uint32="unsigned short"
    elif test "$ac_cv_sizeof_int" = 4 ; then
        rd_cv_uint32="unsigned int"
    elif test "$ac_cv_sizeof_long" = 4 ; then
        rd_cv_uint32="unsigned long"
    elif test "$ac_cv_sizeof_long_long" = 4 ; then
        rd_cv_uint32="unsigned long long"
    else
        AC_MSG_ERROR([No unsigned 32-bit integral type.])
    fi
fi
if test "$rd_cv_uint32" != yes; then
        u_int32_decl="typedef $rd_cv_uint32 u_int32_t;"
fi

AC_SUBST(u_int64_decl)
AC_CHECK_TYPE(u_int64_t)
rd_cv_uint64=$ac_cv_type_u_int64_t
if test "$rd_cv_uint64" = no; then
    if test "$ac_cv_sizeof_short" = 8 ; then 
        rd_cv_uint64="unsigned short"
    elif test "$ac_cv_sizeof_int" = 8 ; then
        rd_cv_uint64="unsigned int"
    elif test "$ac_cv_sizeof_long" = 8 ; then
        rd_cv_uint64="unsigned long"
    elif test "$ac_cv_sizeof_long_long" = 8 ; then
        rd_cv_uint64="unsigned long long"
    else
        AC_MSG_ERROR([No unsigned 64-bit integral type.])
    fi
fi
if test "$rd_cv_uint64" != yes; then
        u_int64_decl="typedef $rd_cv_uint64 u_int64_t;"
fi


AC_PROG_CXX


AC_LANG(C++)

AC_SUBST(POLYLIB_LIBS)
AC_SUBST(SYCK_LIBS)
AC_SUBST(libxml2_LIBS)
POLYLIB_LIBS="-lpolylibgmp"
SYCK_LIBS="-lsyck"
libxml2_LIBS="-lxml2"

AC_ARG_WITH(isa,
  AS_HELP_STRING([--with-isa=DIR],[directory containing ISA tool set]) )
if test "x$with_isa" != "x"; then
  CPPFLAGS="$CPPFLAGS -I$with_isa/include -I$with_isa/barvinok"
  dnl We still need to following one for cloog_util.cc
  CPPFLAGS="$CPPFLAGS -I$with_isa"
  CPPFLAGS="$CPPFLAGS -I$with_isa/isl/include -I$with_isa/barvinok/polylib/include"
  CPPFLAGS="$CPPFLAGS -I$with_isa/cloog/include"
  LDFLAGS="$LDFLAGS -L$with_isa/lib -L$with_isa/barvinok/polylib -L$with_isa/cloog"
fi
ISA_DIR="$with_isa"
AC_SUBST(ISA_DIR)

AC_ARG_WITH(pngen,
  AS_HELP_STRING([--with-pngen=DIR],[directory containing all other pn-related tools such as syck and gmp]) )
if test "x$with_pngen" != "x"; then
  CPPFLAGS="$CPPFLAGS -I$with_pngen -I$with_pngen/include -I/usr/include/libxml2 -I$with_pngen/include/libxml2"
  LDFLAGS="$LDFLAGS -L$with_pngen/lib"
fi

AC_SUBST(CLOOG_LIBS)
CLOOG_LIBS="-lcloog-isl"

#AC_CONFIG_HEADERS(config.h)
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
