# Configuration script for pntools (experimental tool directory)
# Sven van Haastregt
# LIACS, Leiden University

AC_INIT
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(pntools, 0.01)
AC_PROG_CC

AC_PROG_LIBTOOL
AC_PROG_CXX

AC_LANG(C++)

AC_SUBST(POLYLIB_LIBS)
AC_SUBST(SYCK_LIBS)
AC_SUBST(libxml2_LIBS)
POLYLIB_LIBS="-lpolylibgmp"
SYCK_LIBS="-lsyck"
libxml2_LIBS="-lxml2"
CPPFLAGS="-I/usr/include/libxml2"

AC_ARG_WITH(isa,
  AS_HELP_STRING([--with-isa=DIR],[directory containing ISA tool set]) )
if test "x$with_isa" != "x"; then
  CPPFLAGS="$CPPFLAGS -I$with_isa/include -I$with_isa/barvinok"
  dnl We still need to following one for cloog_util.cc
  CPPFLAGS="$CPPFLAGS -I$with_isa"
  CPPFLAGS="$CPPFLAGS -I$with_isa/isl/include -I$with_isa/barvinok/polylib/include"
  CPPFLAGS="$CPPFLAGS -I$with_isa/cloog/include"
  LDFLAGS="$LDFLAGS -L$with_isa/lib -L$with_isa/barvinok/polylib -L$with_isa/cloog"
fi
ISA_DIR="$with_isa"
AC_SUBST(ISA_DIR)

AC_ARG_WITH(pngen,
  AS_HELP_STRING([--with-pngen=DIR],[directory containing all other pn-related tools such as syck and gmp]) )
if test "x$with_pngen" != "x"; then
  CPPFLAGS="-I$with_pngen/include/libxml2 $CPPFLAGS -I$with_pngen -I$with_pngen/include"
  LDFLAGS="$LDFLAGS -L$with_pngen/lib"
fi

AC_SUBST(CLOOG_LIBS)
CLOOG_LIBS="-lcloog-isl"

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
